--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Cormorant+Unicase:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
 </head>
-<body>
+<body style="background-image:url(image.jpg); background-size: cover; background-position: center;">
   orant.xyz
 </body>
 </html>
