--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 
 </head>
 <body style="background-image:url(image.jpg); background-size: cover; background-position: center;">
-  orant.xyz
+  <!-- orant.xyz -->
 </body>
 </html>
