First content version

--- a/index.html
+++ b/index.html
@@ -14,8 +14,77 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Cormorant+Unicase:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
+  <script>
+
+var themes = {
+  "image63.jpg": "#BAD8DB"
+}
+  </script>
+
+
 </head>
-<body style="background-image:url(image.jpg); background-size: cover; background-position: center;">
-  <!-- orant.xyz -->
+<body>
+<!--   <header style="background-image:url('img/image63.jpg');">
+    <section>
+      <nav>
+        <span class="name">Ant Orant</span> &mdash;
+        <em>counselling</em>
+      </nav>
+    </section>
+  </header> -->
+  <main>
+    <section>
+      <img src="img/profile.png" class="profile" />
+      <h1><span class="name">Ant Orant &mdash;</span>Counselling</h1>
+      
+      <p>I offer psychological support for individuals as part of my training in counselling.</p>
+
+      <p>A confidential 1:1 space for listening, reflection, and perspective.
+        <br/>Conversations on the phone, video call, or in-person in Berlin.<p>
+      <p>It’s intended as a complement to professional psychotherapy, a more accessible alternative, or a step towards the right help.</p>
+      <!-- <hr> -->
+      <h3>How it can help:</h3>
+      <ul>
+        <li>Discuss things you don't have time for in therapy.</li>
+        <li>Take some pressure off partners, friends or family.</li>
+        <li>Talk through something spontaneously.</li>
+      </ul>
+      <h3>For example:</h3>
+      <ul>
+        <li>Relationships, love, family and friends — needs, attachment, and communication.</li>
+        <li>Work: communication, relationships, conflict, professional development.</li>
+        <li>Creativity, self-expression, artistic practice: writing, art, music.</li>
+        <li>Self-discovery, purpose and vocation.</li>
+      </ul>
+      <hr>
+      <p style="text-align: center;">Reach out: <a href="mailto:ant@orant.xyz" class="plain-text">ant@orant.xyz</a></p>
+      <hr>
+      <h2 id="approach">Approach</h2>
+      <p>My approach is <em>integrative</em> and <em>person-centred</em>.<br/><em>Integrative</em> in that I work with ideas and techniques from different schools of psychology; <em>person-centred</em> means that the process is guided by you, and we work together to find shared language and models that resonate with you.</p>
+      <p>I work with the following basic principles:</p>
+      <ul>
+        <li>As Freud said, "the talking cure": talking through one's thoughts and feelings, with an interested, objective person, is therapeutic in itself.</li>
+        <li>Growth is painful, and there is no life without suffering, but there is always meaning, value and purpose to be found within.</li>
+        <li>To recognise and integrate the unconscious aspects of our inner life is the key to psychological health.</li>
+      </ul>
+
+      <p>The following schools and theories influence my work: depth psychology, psychodynamics, psychoanalysis; Jungian/analytical/archetypal psychology; Developmental psychology and object-relations theory; dream work; Attachment theory; Logotherapy (Frankl); Individual psychology (Adler), Lacan; Art therapy and music therapy; Meditation and mindfulness; Stoicism; Taoist and Buddhist philosophy, comparative religion in general.</p>
+
+      <hr>
+
+      <h2 id="about">About</h2>
+      <p>I'm a lifelong student of psychology, philosophy and personal development, and as life has happened to me (as it does) I've had to translate that intellectual interest into real emotional and psychological work. Through journalling I became interested in my dreams, which led me to the work of C.G. Jung, and in turn to an interest in psychoanalysis, and depth psychology in general.</p>
+      <p>After completing introductory courses in psychoanalysis and analytical psychology, I decided to join the MA Counselling program at ThH Friedensau.</p>
+      <p>I've worked in design and technology for 17 years, where my work involves understanding perspectives, guiding conversations, exploring complex problems and supporting peers. I always found my work with people to be the most rewarding, whether helping clients to identify and reach their goals, or helping colleagues to manage stress, complexity and relationships.</p>
+      <p>I've worked as a team lead, mentor, and teacher, and I co-facilitate a regular dream work group.</p>
+
+
+      <hr>
+      <h2>Fees</h2>
+      <p>50€/session (50 minutes) — lower-income rates negotiable on request.</p>
+      <hr>
+      </p>
+    </section>
+  </main>
 </body>
 </html>
