--- a/index.html
+++ b/index.html
@@ -23,24 +23,37 @@
       <p>I offer psychological support for individuals as part of my training in counselling.</p>
 
       <p>A confidential 1:1 space for listening, reflection, and perspective.
-        <br/>Conversations on the phone, video call, or in-person in Berlin.<p>
+        <br/>Conversations on the phone, video call, or in-person in Berlin, in English or German.<p>
       <p>It’s intended as a complement to professional psychotherapy, a more accessible alternative, or a step towards the right help.</p>
       <!-- <hr> -->
       <h3>How it can help:</h3>
       <ul>
-        <li>Discuss things you don't have time for in therapy.</li>
         <li>Take some pressure off partners, friends or family.</li>
         <li>Talk through something spontaneously.</li>
+        <li>Discuss things you don't have time for in therapy.</li>
       </ul>
       <h3>For example:</h3>
       <ul>
         <li>Relationships, love, family and friends — needs, attachment, and communication.</li>
         <li>Work: communication, relationships, conflict, professional development.</li>
+        <li>Death, illness, grief and loss</li>
         <li>Creativity, self-expression, artistic practice: writing, art, music.</li>
         <li>Self-discovery, purpose and vocation.</li>
       </ul>
       <hr>
       <p style="text-align: center;">Reach out: <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
+      <hr>
+      <h2 id="about">About</h2>
+      <p>I'm a lifelong student of psychology, philosophy and personal development, and as life has happened to me (as it does) I've had to translate that intellectual interest into real emotional and psychological work. Through journalling I became interested in my dreams, which led me to the work of C.G. Jung, and in turn to an interest in psychoanalysis, and depth psychology in general. I co-facilitate a regular dream work group.</p>
+      <p>After completing introductory courses in psychoanalysis and analytical psychology, I decided to join the MA Counselling program at ThH Friedensau. I was initially skeptical about studying at a religious school, but found a practical, systemic-based curriculum, and a respectful, open-minded and contemplative environment.</p>
+      <p>I have a Bachelor's degree in Fine Art, and I've worked in design, technology and music for 17 years, as a team lead, mentor, and teacher. My work involves understanding perspectives, guiding conversations, exploring complex problems and supporting peers. I always found my work with people to be the most rewarding, whether helping clients to identify and reach their goals, or helping colleagues to manage stress, complexity and relationships.</p>
+      <hr>
+      <p style="text-align: center;">Reach out: <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
+      <hr>
+      <h2>Fees</h2>
+      <p>50€/session (50 minutes) — lower-income rates are negotiable on request.<br/>
+        First session is free.
+      </p>
       <hr>
       <h2 id="approach">Approach</h2>
       <p>My approach is <em>integrative</em> and <em>person-centred</em>.<br/><em>Integrative</em> in that I work with ideas and techniques from different schools of psychology; <em>person-centred</em> means that the process is guided by you, and we work together to find shared language and models that resonate with you.</p>
@@ -48,7 +61,7 @@
       <ul>
         <li>"The talking cure": talking through one's thoughts and feelings, with an interested, objective person, is therapeutic in itself.</li>
         <li>Growth is painful, and there is no life without suffering, but there is always meaning, value and purpose to be found within.</li>
-        <li>Recognise and integrating the unconscious aspects of our inner life is the key to psychological health.</li>
+        <li>Recognising and integrating the unconscious aspects of our inner life is the key to psychological health.</li>
       </ul>
 
       <p>The following schools and theories influence my work: depth psychology, psychodynamics, psychoanalysis; Jungian/analytical/archetypal psychology; Developmental psychology and object-relations theory; dream work; Attachment theory; Logotherapy (Frankl); Individual psychology (Adler), Lacan; Art therapy and music therapy; Meditation and mindfulness; Stoicism; Taoist and Buddhist philosophy, comparative religion in general.</p>
@@ -56,23 +69,14 @@
       <hr>
 
 
-      <h2 id="about">About</h2>
-      <p>I'm a lifelong student of psychology, philosophy and personal development, and as life has happened to me (as it does) I've had to translate that intellectual interest into real emotional and psychological work. Through journalling I became interested in my dreams, which led me to the work of C.G. Jung, and in turn to an interest in psychoanalysis, and depth psychology in general. I co-facilitate a regular dream work group.</p>
-      <p>After completing introductory courses in psychoanalysis and analytical psychology, I decided to join the MA Counselling program at ThH Friedensau. I was initially skeptical about studying at a religious school, but found a practical, systemic-based curriculum, and a respectful, open-minded and contemplative environment.</p>
-      <p>I've worked in design, technology and music for 17 years, as a team lead, mentor, and teacher. My work involves understanding perspectives, guiding conversations, exploring complex problems and supporting peers. I always found my work with people to be the most rewarding, whether helping clients to identify and reach their goals, or helping colleagues to manage stress, complexity and relationships.</p>
-      <hr>
-      <h2>Fees</h2>
-      <p>50€/session (50 minutes) — lower-income rates are negotiable on request.</p>
-      <hr>
-      <p style="text-align: center;">Reach out: <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
-      <hr>
+      
       <h3>Safety</h3>
       <p>I am not yet an accredited counsellor. While in training I work under supervision.</p>
       <p>If you are in an acute crisis, or someone is in danger, please contact a fully-trained professional:</p>
       <p>
         <a href="https://www.berliner-krisendienst.de">Berliner Krisendienst</a><br/>
-        <a href="https://complicated.life">It's Complicated</a><br/>
         <a href="https://krisenchat.de/en">Krisenchat</a><br/>
+        <a href="https://complicated.life">It's Complicated</a><br/>
         <a href="https://www.samaritans.org/">Samaritans</a><br/>
     </section>
   </main>
