--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
       <!-- <hr> -->
       <h3>How it can help:</h3>
       <ul>
+        <li>Talk through something spontaneously, get a second opinion.</li>
         <li>Take some pressure off partners, friends or family.</li>
-        <li>Talk through something spontaneously.</li>
         <li>Discuss things you don't have time for in therapy.</li>
       </ul>
-      <h3>For example:</h3>
+      <h3>Topics like:</h3>
       <ul>
         <li>Relationships, love, family and friends — needs, attachment, and communication.</li>
         <li>Work: communication, relationships, conflict, professional development.</li>
@@ -44,8 +44,8 @@
       <p style="text-align: center;">Reach out: <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
       <hr>
       <h2 id="about">About</h2>
-      <p>I'm a lifelong student of psychology, philosophy and personal development, and as life has happened to me (as it does) I've had to translate that intellectual interest into real emotional and psychological work. Through journalling I became interested in my dreams, which led me to the work of C.G. Jung, and in turn to an interest in psychoanalysis, and depth psychology in general. I co-facilitate a regular dream work group.</p>
-      <p>After completing introductory courses in psychoanalysis and analytical psychology, I decided to join the MA Counselling program at ThH Friedensau. I was initially skeptical about studying at a religious school, but found a practical, systemic-based curriculum, and a respectful, open-minded and contemplative environment.</p>
+      <p>I'm a lifelong student of psychology, philosophy and personal development. As life has happened, I've had to translate that intellectual interest into real emotional and psychological work. Through journalling I became interested in my dreams, which led me to the work of C.G. Jung, and in turn to an interest in psychoanalysis, and depth psychology in general. <!--I co-facilitate a regular dream work group.--></p>
+      <p>After completing introductory courses in psychoanalysis and analytical psychology, I decided to join the MA Counselling program at ThH Friedensau. I was initially skeptical about studying at a religious school, but found a practical, systemic-based curriculum, and a respectful, open-minded and contemplative environment. My own philosophical attitude is influenced by Taoism, Buddhism, Stoicism and comparative religion in general.</p>
       <p>I have a Bachelor's degree in Fine Art, and I've worked in design, technology and music for 17 years, as a team lead, mentor, and teacher. My work involves understanding perspectives, guiding conversations, exploring complex problems and supporting peers. I always found my work with people to be the most rewarding, whether helping clients to identify and reach their goals, or helping colleagues to manage stress, complexity and relationships.</p>
       <hr>
       <p style="text-align: center;">Reach out: <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
