Edit text, font size

--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
       <p>I offer psychological support for individuals as part of my training in counselling.</p>
 
       <p>A confidential 1:1 space for listening, reflection, and perspective.
-        <br/>Conversations on the phone, video call, or in-person in Berlin, in English or German.<p>
-      <p>It’s intended as a complement to professional psychotherapy, a more accessible alternative, or a step towards the right help.</p>
+        Conversations on the phone, video call, or in-person in Berlin. <br/>In English or German.<p>
       <!-- <hr> -->
       <h3>How it can help:</h3>
       <ul>
@@ -71,15 +70,17 @@
 
       
       <h3>Safety</h3>
-      <p>I am not yet an accredited counsellor. While in training I work under supervision.</p>
+      <p>I am not yet an accredited counsellor. While in training I work under supervision. It’s intended as a complement to professional psychotherapy, a more accessible alternative, or a step towards the right help.</p>
       <p>If you are in an acute crisis, or someone is in danger, please contact a fully-trained professional:</p>
-      <p>
-        <a href="https://www.berliner-krisendienst.de">Berliner Krisendienst</a><br/>
-        <a href="https://krisenchat.de/en">Krisenchat</a><br/>
-        <a href="https://complicated.life">It's Complicated</a><br/>
-        <a href="https://www.samaritans.org/">Samaritans</a><br/>
+      <ul>
+        <li><a href="https://www.berliner-krisendienst.de">Berliner Krisendienst</a><br/></li>
+        <li><a href="https://krisenchat.de/en">Krisenchat</a><br/></li>
+        <li><a href="https://complicated.life">It's Complicated</a><br/></li>
+        <li><a href="https://www.samaritans.org/">Samaritans</a><br/></li>
+      </ul>
     </section>
   </main>
+  <footer></footer>
 </body>
 </html>
 
