--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <h2 id="about">About</h2>
     <p>I'm a lifelong student of psychology, philosophy and personal development. As life has happened, I've had to translate that intellectual interest into real emotional and psychological work. Through journalling I became interested in my dreams, which led me to the work of C.G. Jung, and in turn to an interest in psychoanalysis, and depth psychology in general.</p>
     <p>After completing introductory courses in psychoanalysis and analytical psychology, I decided to join the MA Counselling program at ThH Friedensau. I was skeptical about a religious school, but found a practical, systemic-based curriculum, and an open-minded and contemplative environment. My own philosophical attitude is influenced by Taoism, Buddhism, Stoicism and comparative religion in general.</p>
-    <p>I have a Bachelor's degree in Fine Art, and I've worked in design, technology and music for 17 years, as a team lead, mentor, and teacher. My work involves understanding perspectives, guiding conversations, exploring complex problems and supporting peers. I always found my work with people to be the most rewarding, whether helping clients to identify and reach their goals, or helping colleagues to manage stress, complexity and relationships. I co-facilitate a regular dream work group.</p>
+    <p>I have a Bachelor's degree in Fine Art, and I've worked in design, technology and music for 17 years, as a team lead, mentor, and teacher. My work involves understanding perspectives, guiding conversations, exploring complex problems and supporting peers. I always found my work with people to be the most rewarding, whether helping clients to identify and reach their goals, or helping colleagues to manage stress, complexity and relationships.</p>
     <hr>
     <p style="text-align: center;">Reach out: <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
     <hr>
@@ -61,6 +61,8 @@
       <li>Growth is painful, and there is no life without suffering, but there is always meaning, value and purpose to be found within.</li>
       <li>Recognising and integrating the unconscious aspects of our inner life is the key to psychological health.</li>
     </ul>
+
+    <p>I also co-facilitate a regular dream work group.</p>
 
     <!--
     <p>The following schools and theories influence my work: depth psychology, psychodynamics, psychoanalysis; Jungian/analytical/archetypal psychology; Developmental psychology and object-relations theory; dream work; Attachment theory; Logotherapy (Frankl); Individual psychology (Adler), Lacan; Art therapy and music therapy; Meditation and mindfulness; Stoicism; Taoist and Buddhist philosophy, comparative religion in general.</p>
