--- a/index.html
+++ b/index.html
@@ -22,21 +22,24 @@
     <p>I offer psychological support for individuals as part of my training in counselling.</p>
 
     <p>A confidential 1:1 space for listening, reflection, and perspective.
-      Conversations on the phone, video call, or in-person in Berlin. <br/>In English or German.<p>
+      Conversations on the phone, or video call, in English or German.<p>
     <!-- <hr> -->
+    <!--
     <h3>How it can help:</h3>
     <ul>
       <li>Talk through something spontaneously, get a second opinion.</li>
       <li>Take some pressure off partners, friends or family.</li>
       <li>Discuss things you don't have time for in therapy.</li>
     </ul>
+    -->
     <h3>Topics like:</h3>
     <ul>
-      <li>Relationships, love, family and friends — needs, attachment, and communication.</li>
-      <li>Work: communication, relationships, conflict, professional development.</li>
-      <li>Death, illness, grief and loss</li>
+      <li>Relationships: working through conflict or difficult dynamics; understanding how one relates to others, different types of intimacy; identifying and communicating needs and boundaries; attachment and communication styles; navigating separation.</li>
+      <li>Work: navigating difficult relationships, dynamics, or environments; managing conflicting; communicating effectively; focus, productivity and personal development; questions about vocation, finding meaningful work.</li>
+      <li>Coping with death, illness, grief and loss.</li>
+      <li>Dream work and dream analysis: understanding one's own symbolic language.</li>
+      <li>Spirituality: philosophical reflection, ritual, meditation, psychdelic integration; working with a religious upbringing.</li>
       <li>Creativity, self-expression, artistic practice: writing, art, music.</li>
-      <li>Self-discovery, purpose and vocation.</li>
     </ul>
     <hr>
     <h2>Fees</h2>
@@ -44,14 +47,14 @@
       First session is free.
     </p>
     <hr>
-    <p style="text-align: center;">Reach out: <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
+    <p style="text-align: center;">Free consultation: <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
     <hr>
     <h2 id="about">About</h2>
     <p>I'm a lifelong student of psychology, philosophy and personal development. As life has happened, I've had to translate that intellectual interest into real emotional and psychological work. Through journalling I became interested in my dreams, which led me to the work of C.G. Jung, and in turn to an interest in psychoanalysis, and depth psychology in general.</p>
     <p>After completing introductory courses in psychoanalysis and analytical psychology, I decided to join the MA Counselling program at ThH Friedensau. I was skeptical about a religious school, but found a practical, systemic-based curriculum, and an open-minded and contemplative environment. My own philosophical attitude is influenced by Taoism, Buddhism, Stoicism and comparative religion in general.</p>
     <p>I have a Bachelor's degree in Fine Art, and I've worked in design, technology and music for 17 years, as a team lead, mentor, and teacher. My work involves understanding perspectives, guiding conversations, exploring complex problems and supporting peers. I always found my work with people to be the most rewarding, whether helping clients to identify and reach their goals, or helping colleagues to manage stress, complexity and relationships.</p>
     <hr>
-    <p style="text-align: center;">Reach out: <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
+    <p style="text-align: center;">Free consultation: <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
     <hr>
     <h2 id="approach">Approach</h2>
     <p>My approach is <em>integrative</em> and <em>person-centred</em>.<br/><em>Integrative</em> in that I work with ideas and techniques from different schools of psychology; <em>person-centred</em> means that the process is guided by you, and we work together to find shared language and models that resonate with you.</p>
@@ -69,7 +72,7 @@
     -->
 
     <hr>
-    <p style="text-align: center;">Reach out: <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
+    <p style="text-align: center;">Free consultation: <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
     <hr>
 
     
