--- a/index.html
+++ b/index.html
@@ -21,30 +21,29 @@
     
     <p>I offer psychological support for individuals as part of my training in counselling.</p>
 
-    <p>A confidential 1:1 space for listening, reflection, and perspective.
-      Conversations on the phone, or video call, in English or German.<p>
+    <p>A confidential 1:1 space for listening, reflection, and perspective; conversations on the phone, or video call, in English or German.<p>
     <!-- <hr> -->
-    <!--
+
     <h3>How it can help:</h3>
     <ul>
       <li>Talk through something spontaneously, get a second opinion.</li>
       <li>Take some pressure off partners, friends or family.</li>
       <li>Discuss things you don't have time for in therapy.</li>
     </ul>
-    -->
+
     <h3>Topics like:</h3>
     <ul>
       <li>Relationships: working through conflict or difficult dynamics; understanding how one relates to others, different types of intimacy; identifying and communicating needs and boundaries; attachment and communication styles; navigating separation.</li>
       <li>Work: navigating difficult relationships, dynamics, or environments; managing conflicting; communicating effectively; focus, productivity and personal development; questions about vocation, finding meaningful work.</li>
       <li>Coping with death, illness, grief and loss.</li>
       <li>Dream work and dream analysis: understanding one's own symbolic language.</li>
-      <li>Spirituality: philosophical reflection, ritual, meditation, psychdelic integration; working with a religious upbringing.</li>
+      <li>Spirituality: philosophical reflection, ritual, meditation, psychedelic integration; working with a religious upbringing.</li>
       <li>Creativity, self-expression, artistic practice: writing, art, music.</li>
     </ul>
     <hr>
     <h2>Fees</h2>
-    <p>50€/session (50 minutes) — lower-income rates are negotiable on request.<br/>
-      First session is free.
+    <p>50€/session (50 minutes) — lower-income rates are possible.<br/>
+      Our first session is free.
     </p>
     <hr>
     <p style="text-align: center;">Free consultation: <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
