New layout with images

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Cormorant+Unicase:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <main>
-    <img src="img/profile.png" class="profile" />
-    <h1><span class="name">Ant Orant &mdash;</span> Counselling</h1>
-    
+  <!-- <main> -->
+    <div class="image-frame cover" style="background-image: url('img/image-52.jpg');">
+      <h1>Counselling<br/>&mdash;<br/><span class="name">Ant Orant</span></h1>
+    </div>
     <p>I offer psychological support for individuals as part of my training in counselling.</p>
-
     <p>A confidential 1:1 space for listening, reflection, and perspective; conversations on the phone, or video call, in English or German.<p>
+    <img src="img/profile2.jpg" class="profile" />
     <!-- <hr> -->
 
     <h3>How it can help:</h3>
@@ -48,6 +48,8 @@
     <hr>
     <p style="text-align: center;">Free consultation: <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
     <hr>
+    <div class="image-frame cover" style="background-image: url('img/image-54.jpg');">
+    </div>
     <h2 id="about">About</h2>
     <p>I'm a lifelong student of psychology, philosophy and personal development. As life has happened, I've had to translate that intellectual interest into real emotional and psychological work. Through journalling I became interested in my dreams, which led me to the work of C.G. Jung, and in turn to an interest in psychoanalysis, and depth psychology in general.</p>
     <p>After completing introductory courses in psychoanalysis and analytical psychology, I decided to join the MA Counselling program at ThH Friedensau. I was skeptical about a religious school, but found a practical, systemic-based curriculum, and an open-minded and contemplative environment. My own philosophical attitude is influenced by Taoism, Buddhism, Stoicism and comparative religion in general.</p>
@@ -55,6 +57,7 @@
     <hr>
     <p style="text-align: center;">Free consultation: <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
     <hr>
+    <div class="image-frame" style="background-image: url('img/image-49.jpg');, background-position: center;"></div>
     <h2 id="approach">Approach</h2>
     <p>My approach is <em>integrative</em> and <em>person-centred</em>.<br/><em>Integrative</em> in that I work with ideas and techniques from different schools of psychology; <em>person-centred</em> means that the process is guided by you, and we work together to find shared language and models that resonate with you.</p>
     <p>I work with the following basic principles:</p>
@@ -74,7 +77,7 @@
     <p style="text-align: center;">Free consultation: <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
     <hr>
 
-    
+    <div class="image-frame" style="background-image: url('img/image-61.jpg');, background-position: center;"></div>
     <h3>Safety</h3>
     <p>I am not yet an accredited counsellor. While in training I work under supervision. It’s intended as a complement to professional psychotherapy, a more accessible alternative, or a step towards the right help.</p>
     <p>If you are in an acute crisis, or someone is in danger, please contact a fully-trained professional:</p>
@@ -84,9 +87,9 @@
       <li><a href="https://complicated.life">It's Complicated</a><br/></li>
       <li><a href="https://www.samaritans.org/">Samaritans</a><br/></li>
     </ul>
-
-  </main>
-  <footer style="background-image: url('img/image47.jpg');"></footer>
+    <hr>
+    <!-- <div class="image-frame" style="background-image: url('img/image-60.jpg');, background-position: center;"></div> -->
+  <!-- </main> -->
 </body>
 </html>
 
