--- a/index.html
+++ b/index.html
@@ -26,20 +26,25 @@
 
     <h3>How it can help:</h3>
     <ul>
-      <li>Talk through something spontaneously, get a second opinion.</li>
-      <li>Take some pressure off partners, friends or family.</li>
-      <li>Discuss things you don't have time for in therapy.</li>
+      <li>Talk through something spontaneously, get a second opinion</li>
+      <li>Take some pressure off partners, friends or family</li>
+      <li>Discuss things you don't have time or space for elsewhere</li>
     </ul>
 
-    <h3>Topics like:</h3>
+    <h3>We can talk about:</h3>
     <ul>
-      <li>Relationships: working through conflict or difficult dynamics; understanding how one relates to others, different types of intimacy; identifying and communicating needs and boundaries; attachment and communication styles; navigating separation.</li>
-      <li>Work: navigating difficult relationships, dynamics, or environments; managing conflicting; communicating effectively; focus, productivity and personal development; questions about vocation, finding meaningful work.</li>
+      <li>Relationships: conflict, dynamics, difficult conversations, needs and boundaries, attachment styles, communication, separation.</li>
+      <li>Work: difficult dynamics or environments, conflicts, communication, productivity, personal development; questions about vocation and finding meaningful work.</li>
       <li>Coping with death, illness, grief and loss.</li>
-      <li>Dream work and dream analysis: understanding one's own symbolic language.</li>
-      <li>Spirituality: philosophical reflection, ritual, meditation, psychedelic integration; working with a religious upbringing.</li>
+      
+      <li>Spirituality: philosophical reflection, ritual, meditation, transcendence experiences; working with a religious upbringing.</li>
       <li>Creativity, self-expression, artistic practice: writing, art, music.</li>
+      <!-- <li>Your personal symbolic language and root metaphors.</li>
+      <li>Dream work and dream analysis: understanding one's own symbolic language.</li> -->
     </ul>
+    <hr>
+    <p>It's <em>not psychotherapy</em>: we don't diagnose or fix.<br/>
+      It's <em>not coaching</em>: it's not goal-oriented, we work with what <em>is</em>.
     <hr>
     <h2>Fees</h2>
     <p>50€/session (50 minutes) — lower-income rates are possible.<br/>
