--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     </div>
     <p>I offer psychological support for individuals as part of my training in counselling.</p>
     <p>A confidential 1:1 space for listening, reflection, and perspective; conversations on the phone, or video call, in English or German.<p>
+    <hr>
     <img src="img/profile2.jpg" class="profile" />
-    <!-- <hr> -->
 
     <h3>How it can help:</h3>
     <ul>
@@ -30,15 +30,15 @@
       <li>Take some pressure off partners, friends or family</li>
       <li>Discuss things you don't have time or space for elsewhere</li>
     </ul>
+    <hr>
 
     <h3>We can talk about:</h3>
     <ul>
-      <li>Relationships: conflict, dynamics, difficult conversations, needs and boundaries, attachment styles, communication, separation.</li>
-      <li>Work: difficult dynamics or environments, conflicts, communication, productivity, personal development; questions about vocation and finding meaningful work.</li>
-      <li>Coping with death, illness, grief and loss.</li>
-      
-      <li>Spirituality: philosophical reflection, ritual, meditation, transcendence experiences; working with a religious upbringing.</li>
-      <li>Creativity, self-expression, artistic practice: writing, art, music.</li>
+      <li>Relationships: conflict, dynamics, difficult conversations, needs and boundaries, attachment styles, communication, separation</li>
+      <li>Work: difficult dynamics or environments, conflicts, communication, productivity, personal development; questions about vocation and finding meaningful work</li>
+      <li>Coping with death, illness, grief and loss</li>
+      <li>Spirituality: philosophical reflection, ritual, meditation, transcendence experiences; integrating a religious upbringing</li>
+      <li>Creativity, self-expression, artistic practice: writing, art, music</li>
       <!-- <li>Your personal symbolic language and root metaphors.</li>
       <li>Dream work and dream analysis: understanding one's own symbolic language.</li> -->
     </ul>
@@ -47,11 +47,11 @@
       It's <em>not coaching</em>: it's not goal-oriented, we work with what <em>is</em>.
     <hr>
     <h2>Fees</h2>
-    <p>50€/session (50 minutes) — lower-income rates are possible.<br/>
+    <p>0&mdash;50€ per session (50 minutes) — based on what you can afford.<br/>
       Our first session is free.
     </p>
     <hr>
-    <p style="text-align: center;">Free consultation: <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
+    <p style="text-align: center;">Write a short message to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
     <hr>
     <div class="image-frame cover" style="background-image: url('img/image-54.jpg');">
     </div>
@@ -60,7 +60,7 @@
     <p>After completing introductory courses in psychoanalysis and analytical psychology, I decided to join the MA Counselling program at ThH Friedensau. I was skeptical about a religious school, but found a practical, systemic-based curriculum, and an open-minded and contemplative environment. My own philosophical attitude is influenced by Taoism, Buddhism, Stoicism and comparative religion in general.</p>
     <p>I have a Bachelor's degree in Fine Art, and I've worked in design, technology and music for 17 years, as a team lead, mentor, and teacher. My work involves understanding perspectives, guiding conversations, exploring complex problems and supporting peers. I always found my work with people to be the most rewarding, whether helping clients to identify and reach their goals, or helping colleagues to manage stress, complexity and relationships.</p>
     <hr>
-    <p style="text-align: center;">Free consultation: <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
+    <p style="text-align: center;">Write a short message to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
     <hr>
     <div class="image-frame" style="background-image: url('img/image-49.jpg');, background-position: center;"></div>
     <h2 id="approach">Approach</h2>
@@ -79,7 +79,7 @@
     -->
 
     <hr>
-    <p style="text-align: center;">Free consultation: <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
+    <p style="text-align: center;">Write a short message to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
     <hr>
 
     <div class="image-frame" style="background-image: url('img/image-61.jpg');, background-position: center;"></div>
